--- a/contact.html
+++ b/contact.html
@@ -1,91 +1,92 @@
 <html>
     <head>
         <title>Contact Me</title>
-        <link rel="icon" href="image/logo.png" type="image_icon">
-        <link rel="stylesheet" href="css/contact.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/contact.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
+        crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         crossorigin="anonymous"
         referrerpolicy="no-referrer" >
     </head>
     <body>
-        <nav>
-            <div class="nav-left">
-                <ul>
-                    <li>
-                        <img src="image/logo.png" alt="Dumbways_logo" />
-                    </li>
-                     <li class="item-collapse">
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li class="item-collapse">
-                        <a href="my-project.html">My Project</a>
-                    </li>
-                    <li class="item-collapse">
-                        <a href="testimonials.html">Testimonials</a>
-                    </li>
-                 </ul>
-            </div>
-            <div class="nav-right item-collapse">
-                <a href="contact.html">Contact Me</a>
-            </div>
-            <div class="nav-right" id="barsmenu">
-                <button style="background-color: transparent; border: none; cursor: pointer;"
-                onclick="openHamburger()"
-                >
-                    <i class="fa-2x fa-solid fa-bars"></i>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary px-sm-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="image/logo.png" />
+                </a>
+                <button 
+                class="navbar-toggler" 
+                type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarTogglerDemo02" 
+                aria-control="navbarTogglerDemo02" 
+                aria-expanded="false" 
+                aria-label="Toggle Navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item ms-2">
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link" 
+                            href="add-project.html"
+                            >Add Project</a>
+                        </li>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link" 
+                            href="testimonials.html"
+                            >Testimonials</a>
+                        </li>
+                    </ul>
+                        <a href="contact.html" class="btn bg-blue text-white px-3 py-1 rounded-4">Contact Me</a>
+                </div>
             </div>
         </nav>
 
-        <div class="hamburger-nav-container" id="hamburger-nav-container">
-            <a href="index.html">Home</a>
-            <a href="my-project.html">My Project</a>
-            <a href="testimonials.html">Testimonials</a>
-            <div class="hamburger-contact">
-                <a href="contact.html">
-                    <p>
-                        Contact
-                    </p>
-                </a>
-            </div>
-          </div>
-        
-        <div class="contact-me">
-            <div class="container-contact">
+        <div class="container d-flex justify-content-center align-items-center py-2">
+            <div class="container-contact mt-5" style="width: 500px;">
+                <h1 class="text-center fw-bold mb-5">GET THE SOLVE!</h1>
                 <form>
-                <div>
-                    <label for="input-name">Name</label>
-                    <input id="input-name" type="text" required />
+                <div class="mb-3">
+                    <label for="input-name" class="form-label fw-bold">Name</label>
+                    <input class="form-control rounded-3" id="input-name" type="text" placeholder="Not a fake name!" required />
                 </div>
-                <div>
-                    <label for="input-email">Email</label>
-                    <input id="input-email" type="email" required />
+                <div class="mb-3">
+                    <label for="input-email" class="form-label fw-bold">Email</label>
+                    <input class="form-control rounded-3" id="input-email" type="email" placeholder="example: person@gmail.com" required />
                 </div> 
-                <div>
-                    <label for=input-phone>Phone</label>
-                    <input id="input-phone" type="number" required />
+                <div class="mb-3">
+                    <label for="input-phone" class="form-label fw-bold">Phone</label>
+                    <input class="form-control rounded-3" id="input-phone" type="number" placeholder="preferably whatsapp number" required />
                 </div>
                 <div>
-                    <label for="input-subject">Subject</label>
-                    <select id="input-subject"> 
+                    <label for="input-subject" class="form-label fw-bold">Subject</label>
+                    <select class="form-select mb-3 rounded-3" id="input-subject" aria-label="default-select-example"> 
                         <option value="" hidden>Select</option>
                         <option>Frontend</option>
                         <option>Backend</option>
                         <option>Fullstack</option>
                     </select>
-                <div>
-                    <label for="input-message">Input Message</label>
-                    <textarea id="input-message" rows="5" cols="10"></textarea>
+                <div class="mb-4">
+                    <label for="input-message" class="form-label fw-bold">Input Message</label>
+                    <textarea class="form-control rounded-2" id="input-message" placeholder="Your message in here"></textarea>
                 </div>
-                <div class="button-container">
-                    <button type="button" onclick="submitData()">Submit</button>
+                <div class=" d-md-flex justify-content-md-end">
+                    <button class="btn bg-blue text-white rounded-4 px-4" type="button" onclick="submitData()">Submit</button>
                 </div>  
                 </form>
             </div>
         </div>
-        
+
         <script src="js/contact.js"></script>
-        <script src="js/index.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
+        crossorigin="anonymous">
+        </script>
     </body>
 </html>
