--- a/index.html
+++ b/index.html
@@ -1,108 +1,192 @@
 <html>
     <head>
         <title>Home</title>
-        <!--ini bagian kepala website, terdiri dari judul, title, dsb.-->
         <link rel="icon" href="image/logo.png" type="image_icon">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
+        crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         crossorigin="anonymous"
         referrerpolicy="no-referrer" >
-
     </head>
+
     <body>
-        <nav>
-            <div class="nav-left">
-                <ul>
-                    <li>
-                        <img src="image/logo.png" alt="Dumbways_logo" />
-                    </li>
-                     <li class="item-collapse">
-                        <a class="active" href="index.html">Home</a>
-                    </li>
-                    <li class="item-collapse">
-                        <a href="my-project.html">My Project</a>
-                    </li>
-                    <li class="item-collapse">
-                        <a href="testimonials.html">Testimonials</a>
-                    </li>
-                 </ul>
-            </div>
-            <div class="nav-right item-collapse">
-                <a href="contact.html">Contact Me</a>
-            </div>
-            <div class="nav-right" id="barsmenu">
-                <button style="background-color: transparent; border: none; cursor: pointer;"
-                onclick="openHamburger()"
-                >
-                    <i class="fa-2x fa-solid fa-bars"></i>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary px-sm-5">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="image/logo.png" />
+                </a>
+                <button 
+                class="navbar-toggler" 
+                type="button" 
+                data-bs-toggle="collapse" 
+                data-bs-target="#navbarTogglerDemo02" 
+                aria-control="navbarTogglerDemo02" 
+                aria-expanded="false" 
+                aria-label="Toggle Navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item ms-2">
+                            <a class="nav-link active text-blue" 
+                            aria-current="page" 
+                            href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link" 
+                            aria-current="page"
+                            href="add-project.html"
+                            >Add Project</a>
+                        </li>
+                        <li class="nav-item ms-2">
+                            <a class="nav-link" 
+                            href="testimonials.html"
+                            >Testimonials</a>
+                        </li>
+                    </ul>
+                        <a href="contact.html" class="btn bg-blue text-white px-3 py-1 rounded-4">Contact Me</a>
+                </div>
             </div>
         </nav>
 
-        <div class="hamburger-nav-container" id="hamburger-nav-container">
-            <a href="index.html" class="hamburger-active">Home</a>
-            <a href="my-project.html">My Project</a>
-            <a href="testimonials.html">Testimonials</a>
-            <div class="hamburger-contact">
-                <a href="contact.html">
-                    <p>
-                        Contact
-                    </p>
-                </a>
-            </div>
-          </div>
-          
-          <div class="container">
-            <section>
-            <div class="left">
-                <h2>Hi Welcome to My Hut</h2>
-                <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non scelerisque purus.
-                    Nam ornare placerat iaculis. Suspendisse ac magna sit amet neque interdum sodales. In condimentum purus at rhoncus lobortis.
-                    Aliquam eu nisl a magna varius suscipit. Etiam ac leo in tortor pellentesque pretium. Integer porttitor enim varius nisl efficitur facilisis.
-                    Aliquam ut mi ante. Nam pellentesque vel mi id vulputate. Vivamus vel faucibus orci. Morbi sollicitudin interdum laoreet. Praesent a felis eu ligula ultricies accumsan a sed dolor.</p>
-                <div class="contact-cv">
-                    <div class="contact-button">
-                        <button>
-                            <a href="contact.html" style="color: white">Contact</a>
-                        </button>
+        <div class="container my-5">
+            <div class="card mt-3 mb-2 shadow-lg p-3 rounded-4">
+                <div class="row g-4">
+                    <div class="card-left col-lg-8 mt-lg-5">
+                        <div class="card-body">
+                            <h2 class="fw-semibold text-blue mb-3">Hi Welcome to My Hut</h2>
+                            <p style="text-align: justify">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non scelerisque purus.
+                            Nam ornare placerat iaculis. Suspendisse ac magna sit amet neque interdum sodales. In condimentum purus at rhoncus lobortis.
+                            Aliquam eu nisl a magna varius suscipit. Etiam ac leo in tortor pellentesque pretium. Integer porttitor enim varius nisl efficitur facilisis.
+                            Aliquam ut mi ante. Nam pellentesque vel mi id vulputate. Vivamus vel faucibus orci. Morbi sollicitudin interdum laoreet. Praesent a felis eu ligula ultricies accumsan a sed dolor.</p>
+                        <div class="contact-cv d-flex gap-3 mt-4 mb-4">
+                        <div class="contact-button">
+                            <button type="button" class="btn bg-blue rounded-4 px-3 py-1">
+                                <a href="contact.html" class="text-decoration-none" style="color: white">Contact</a>
+                            </button>
+                        </div>
+                        <div class="cv-button mt-2">
+                            <a class="text-decoration-none" href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
+                                <p>download Cv
+                                    <i class="fa-solid fa-download"></i>
+                                </p>
+                            </a>
+                        </div>
                     </div>
-                    <div class="cv-button">
-                        <a href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
-                            <p>download Cv
-                                <i class="fa-solid fa-download"></i>
-                            </p>
-                        </a>
+                    <div class="card-container">
+                        <h2 class="fw-semibold text-blue mb-3">Found me on</h2>
+                        <div class="social-media d-flex gap-3">
+                            <a class="text-decoration-none" href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
+                                <i class="fa-brands fa-linkedin fs-3"></i>
+                            </a>
+                            <a class="text-decoration-none" href="https://web.facebook.com/rinbm59" target="_blank">
+                                <i class="fa-brands fa-facebook fs-3"></i>
+                            </a>
+                            <a class="text-decoration-none" href="https://www.instagram.com/iki__59" target="_blank">
+                                <i class="fa-brands fa-square-instagram fs-3"></i>
+                            </a>
+                        </div>
+                    </div>
+                    </div>
+                    </div>
+                    <div class="card-right col-lg-4">
+                        <div class="card border-0 shadow-lg">
+                            <img
+                            src="image/kucing.jpg"
+                            alt="menggg"
+                            class="img-fluid rounded-top"
+                            />
+                            <div class="card-body">
+                                <h4 style="text-align: center; line-height: 15px">Muhammad Rizki B</h4>
+                                <p style="text-align: center; margin-bottom: 5px">Fullstack Developer</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="social-media" class="card-container">
-                    <h2>Found me on</h2>
-                    <a href="https://www.linkedin.com/in/muhammad-rizki-budiman-12a71a24b" target="_blank">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a href="https://web.facebook.com/rinbm59" target="_blank">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                    <a href="https://www.instagram.com/iki__59" target="_blank">
-                        <i class="fa-brands fa-square-instagram"></i>
-                    </a>
-                </div>
             </div>
-        <div class="right">
-        <div class="card-me">
-            <img
-            src="image/kucing.jpg"
-            alt="menggg"/>
-                <h2 style="text-align: center; line-height: 15px">Muhammad Rizki B</h2>
-                <p style="text-align: center; line-height: -0%; margin-bottom: 15px">Fullstack Developer</p>
         </div>
-        <!--style width 100% persen diatas namanya sistem parent and child, artinya gambar 100% memenuhi border 350 px diatas
-            semakin naik angka suatu header makin kecil h1 paling besar dan seterusnya-->
-    </section>
-    </div>
-        <!--margin mengatur jarak sebelah atas, kanan bawah dan kiri konten sedangkan text align untuk mengatur konten kita mau ditaruh dimana
-            margin/padding punya 4 value, yaitu atas, kanan, bawah, dan kiri-->    
-        <!--semi coloun atau titik koma untuk memisahkan dua property-->
-            <!--untuk melakukan grouping elemen agar mempermudah kita untuk melakukan styling-->
-        <script src="js/index.js"></script>
+
+        <div class="container-project">
+            <div class="section-project" id="projects">
+                <div class="card border-0 shadow-lg" style="width: 20rem;">
+                <img src="image/apps.jpg" class="card-img-top" alt="apps">
+                <div class="card-body p-3">
+                    <h2 class="mb-3">
+                        <a href="project-detail.html" target="_blank" class="text-decoration-none fw-bolder fs-3" style="color: black;">Dumbways Mobile App 2022</a>
+                    </h2>
+                    Durasi 2 Bulan
+                    <p class="mt-2 mb-2" style="text-align: justify;">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam excepturi reprehenderit molestias vero laboriosam, accusamus aliquam? 
+                    </p>
+                    <div class="tech-icon fs-3 mb-2">
+                        <i class="fa-brands fa-java"></i>
+                        <i class="fa-brands fa-python"></i>
+                        <i class="fa-brands fa-square-js"></i>
+                        <i class="fa-brands fa-php"></i>
+                    </div>
+                    <div class="btn-group d-flex justify-content-center gap-1 mb-1">
+                        <button type="button" class="btn-edit bg-blue fs-sm-7 border-0 rounded-5 px-5 py-1">Edit</button>
+                        <button type="button" class="btn-delete bg-blue fs-sm-7 border-0 rounded-5 px-5 py-1">Delete</button>
+                </div>
+                </div>
+                </div>
+                <div class="card border-0 shadow-lg" style="width: 20rem;">
+                    <img src="image/apps.jpg" class="card-img-top" alt="apps">
+                    <div class="card-body p-3">
+                        <h2 class="mb-3">
+                            <a href="#" target="_blank" class="text-decoration-none fw-bolder fs-3" style="color: black;">Dumbways Mobile App 2022</a>
+                        </h2>
+                        Durasi 2 Bulan
+                        <p class="mt-2 mb-2" style="text-align: justify;">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam excepturi reprehenderit molestias vero laboriosam, accusamus aliquam? 
+                        </p>
+                        <div class="tech-icon fs-3 mb-2">
+                            <i class="fa-brands fa-java"></i>
+                            <i class="fa-brands fa-python"></i>
+                            <i class="fa-brands fa-square-js"></i>
+                            <i class="fa-brands fa-php"></i>
+                        </div>
+                        <div class="btn-group d-flex justify-content-center gap-1 mb-1">
+                            <button type="button" class="btn-edit bg-blue fs-7 border-0 rounded-5 px-5 py-1">Edit</button>
+                            <button type="button" class="btn-delete bg-blue fs-7 border-0 rounded-5 px-5 py-1">Delete</button>
+                    </div>
+                    </div>
+                    </div>
+                    <div class="card border-0 shadow-lg" style="width: 20rem;">
+                        <img src="image/apps.jpg" class="card-img-top" alt="apps">
+                        <div class="card-body p-3">
+                            <h2 class="mb-3">
+                                <a href="#" target="_blank" class="text-decoration-none fw-bolder fs-3" style="color: black;">Dumbways Mobile App 2022</a>
+                            </h2>
+                            Durasi 2 Bulan
+                            <p class="mt-2 mb-2" style="text-align: justify;">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam excepturi reprehenderit molestias vero laboriosam, accusamus aliquam? 
+                            </p>
+                            <div class="tech-icon fs-3 mb-2">
+                                <i class="fa-brands fa-java"></i>
+                                <i class="fa-brands fa-python"></i>
+                                <i class="fa-brands fa-square-js"></i>
+                                <i class="fa-brands fa-php"></i>
+                            </div>
+                            <div class="btn-group d-flex justify-content-center gap-1 mb-1">
+                                <button type="button" class="btn-edit bg-blue fs-7 border-0 rounded-5 px-5 py-1">Edit</button>
+                                <button type="button" class="btn-delete bg-blue fs-7 border-0 rounded-5 px-5 py-1">Delete</button>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
+        crossorigin="anonymous">
+        </script>
     </body>
 </html>
