--- a/project-detail.html
+++ b/project-detail.html
@@ -4,105 +4,103 @@
         <link rel="icon" href="image/logo.png" type="image_icon">
         <link rel="stylesheet" href="css/project-detail.css" />
         <link rel="stylesheet" href="css/style.css" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
+        crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         crossorigin="anonymous"
         referrerpolicy="no-referrer" >
     </head>
     <body>
-      <nav>
-        <div class="nav-left">
-            <ul>
-                <li>
-                    <img src="image/logo.png" alt="Dumbways_logo" />
-                </li>
-                 <li class="item-collapse">
-                    <a class="active" href="index.html">Home</a>
-                </li>
-                <li class="item-collapse">
-                    <a href="my-project.html">My Project</a>
-                </li>
-                <li class="item-collapse">
-                  <a href="testimonials.html">Testimonials</a>
-              </li>
-             </ul>
-        </div>
-        <div class="nav-right item-collapse">
-            <a href="contact.html">Contact Me</a>
-        </div>
-        <div class="nav-right" id="barsmenu">
-            <button style="background-color: transparent; border: none; cursor: pointer;"
-            onclick="openHamburger()"
-            >
-                <i class="fa-2x fa-solid fa-bars"></i>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary px-sm-5">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="image/logo.png" />
+            </a>
+            <button 
+            class="navbar-toggler" 
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#navbarTogglerDemo02" 
+            aria-control="navbarTogglerDemo02" 
+            aria-expanded="false" 
+            aria-label="Toggle Navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item ms-2">
+                        <a class="nav-link active text-blue" 
+                        aria-current="page" 
+                        href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item ms-2">
+                        <a class="nav-link" 
+                        aria-current="page"
+                        href="add-project.html"
+                        >Add Project</a>
+                    </li>
+                    <li class="nav-item ms-2">
+                        <a class="nav-link" 
+                        href="testimonials.html"
+                        >Testimonials</a>
+                    </li>
+                </ul>
+                    <a href="contact.html" class="btn bg-blue text-white px-3 py-1 rounded-4">Contact Me</a>
+            </div>
         </div>
     </nav>
 
-    <div class="hamburger-nav-container" id="hamburger-nav-container">
-        <a href="index.html" class="hamburger-active">Home</a>
-        <a href="my-project.html">My Project</a>
-        <a href="testimonials.html">Testimonials</a>
-        <div class="hamburger-contact">
-          <a href="contact.html">
-              <p>
-                  Contact
-              </p>
-          </a>
-      </div>
-      </div>
-
-      <h1>Dumbways Mobile App</h1>
-        <div class="project-detail">
-          <div class="project-detail-container">
+    <div class="project-detail py-5">
+      <h1 class="fw-bold mb-sm-5 mt-sm-4">Dumbways Mobile App</h1>
+      <div class="container d-sm-flex justify-content-center align-items-center gap-4 mt-3">
             <div class="content-left">
-              <img src="image/apps.jpg" alt="apps" />
+              <img src="image/apps.jpg" alt="apps" class="img-fluid" />
             </div>
-                <div class="content-right">
+                <div class="content-right mt-3 mx-2">
                   <div class="time-project">
                     <h2>Duration</h2>
-                    <div class="date">
-                      <i class="fa-regular fa-calendar-days" style="color: #000000"></i>
-                      <h3>
+                    <div class="date d-flex gap-2 mb-2">
+                      <i class="fa-regular fa-calendar-days fs-4" style="color: #000000"></i>
+                      <h3 class="fs-5 mt-1">
                         1 Jan 2023 - 1 Maret 2022
                       </h3>
                     </div>
-                    <div class="duration">
-                      <i class="fa-regular fa-clock" style="color: #000000"></i>
-                      <h3>
+                    <div class="duration d-flex gap-2 mb-4">
+                      <i class="fa-regular fa-clock fs-4" style="color: #000000"></i>
+                      <h3 class="fs-5">
                         3 Bulan
                       </h3>
                     </div>
                   </div>
                   <div class="project-tech">
                     <h2>Technologies</h2>
-                    <div class="tech-top">
-                      <div class="java-tech">
-                        <i class="fa-brands fa-java"></i>
-                        <h3>Java</h3>
+                    <div class="tech-top d-flex gap-5 mb-2">
+                      <div class="java-tech d-flex gap-2">
+                        <i class="fa-brands fa-java fs-4"></i>
+                        <h3 class="fs-5">Java</h3>
                       </div>
-                      <div class="python-tech">
-                        <i class="fa-brands fa-python"></i>
-                        <h3>Python</h3>
+                      <div class="python-tech d-flex gap-2">
+                        <i class="fa-brands fa-python fs-4"></i>
+                        <h3 class="fs-5">Python</h3>
                       </div>
                     </div>
-                    <div class="tech-bottom">
-                      <div class="js-tech">
-                        <i class="fa-brands fa-square-js"></i>
-                        <h3>Javascript</h3>
+                    <div class="tech-bottom d-flex gap-3">
+                      <div class="js-tech d-flex gap-2">
+                        <i class="fa-brands fa-square-js fs-4"></i>
+                        <h3 class="fs-5">Javascript</h3>
                       </div>
-                      <div class="php-tech">
-                        <i class="fa-brands fa-php"></i>
-                        <h3>PHP</h3>
+                      <div class="php-tech d-flex gap-2">
+                        <i class="fa-brands fa-php fs-4"></i>
+                        <h3 class="fs-5">PHP</h3>
                       </div>
-
                     </div>
                   </div>
-
-
                 </div>
           </div>
         </div>
-                <p>
+                <p class="px-sm-4 py-sm-1 mx-4" style="text-justify: auto;">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nam
                   excepturi reprehenderit molestias vero laboriosam, accusamus
                   aliquam? Voluptatem, libero consectetur quaerat aspernatur porro
@@ -140,6 +138,10 @@
                   sit quibusdam, ipsum autem mollitia? Quae fugit laboriosam cum
                   numquam perferendis aperiam laudantium et vitae. <br />
                 </p>
-      <script src="js/index.js"></script>
+    
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+              integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
+              crossorigin="anonymous">
+      </script>
     </body>
 </html>
